--- a/src/scss/base/varibles.scss
+++ b/src/scss/base/varibles.scss
@@ -48,6 +48,11 @@ body{
 	line-height: 125px;
 	font-weight: normal;
 }
+
+.--rubrica{
+	font-family: 'Rubrica', Arial, sans-serif;
+	font-weight: normal;
+}
 .--avente-subtitle-big{
 	font-size: 19px;
 	line-height: 27px;
