--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -5,6 +5,9 @@
 	background: linear-gradient(to bottom, #ffffff 0%,#ffffff 36%,#d3d3d3 83%,#fafafa 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fafafa',GradientType=0 ); /* IE6-9 */
 	padding-bottom: 130px;
+	min-height: 100vh;
+	display: grid;
+	box-sizing: border-box;
 }
 
 .banner__wrapper{
@@ -29,15 +32,42 @@
 	cursor: pointer;
 	left: 16px;
 	top: calc(100% - 30px);
-	
+
+	// animation: wobble-horizontal 0.2s infinite;
 	img{
 		width: 15px;
 	}
 }
 
+@keyframes wobble-horizontal {
+	12.5% {
+		transform: translateX(8px);
+	}
+
+	25% {
+		transform: translateX(-6px);
+	}
+
+	37.5% {
+		transform: translateX(4px);
+	}
+
+	50% {
+		transform: translateX(-2px);
+	}
+
+	62.5% {
+		transform: translateX(1px);
+	}
+
+	100% {
+		transform: translateX(0);
+	}
+}
 
 .banner__head{
 	position: relative;
+	perspective: 35px;
 }
 .head-img{
 	width: 861px;
@@ -47,6 +77,7 @@
 	left: 0;
 	background:transparent url('../img/head.png') center center no-repeat;
 	background-size: contain;
+	transition: transform 0.5s;
 }
 
 #canvas{
