--- a/src/scss/base/varibles.scss
+++ b/src/scss/base/varibles.scss
@@ -33,6 +33,7 @@ $primary: #fabb00;
 $black: #000000;
 $white: #ffffff;
 $gray: #ededed;
+$bg-gray: #fafafa;
 
 body{
 	font-family: 'Avante', Arial, sans-serif;
@@ -60,6 +61,7 @@ body{
 
 .wrapper {
 	width: 1440px;
+	max-width: 100vw;
 	margin: 0 auto;
 }
 .--primary-color{
