--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,4 +7,5 @@
 @import 'components/video';
 @import 'components/summary';
 @import 'components/project';
+@import 'components/forms';
 @import 'components/footer';
