--- a/src/scss/components/project.scss
+++ b/src/scss/components/project.scss
@@ -1,8 +1,16 @@
+.--gray-gradient{
+	background: #fafafa; /* Old browsers */
+	background: -moz-linear-gradient(top, #fafafa 0%, #e4e4e4 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #fafafa 0%,#e4e4e4 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #fafafa 0%,#e4e4e4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fafafa', endColorstr='#e4e4e4',GradientType=0 ); /* IE6-9 */
+}
 .project{
-	background: $bg-gray;
+	// background: $bg-gray;
 	padding: 20px 0px 100px;
 	position: relative;
 }
+
 
 
 .project__body-row{
@@ -24,11 +32,14 @@
 }
 
 .body-row__title{
+	text-align: center;
+	align-self: center;
 	.subtitle{
 		font-size: 17px;
 		font-style: italic;
 		line-height: 27px;
 		letter-spacing: 2.5px;
+		margin-bottom: 75px;
 	}
 	.main-title{
 		color: $primary;
@@ -36,6 +47,9 @@
 		font-weight: 400;
 		line-height: 58.33px;
 	}
+}
+.body-row__img{
+	position: relative;
 }
 
 .body-row__description{
@@ -59,5 +73,6 @@
 
 	img{
 		width: 100%;
+		display: block;
 	}
 }
