--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -83,3 +83,18 @@
 #canvas{
 	width: 855px;
 }
+
+
+@media screen and (max-width: 425px) {
+	.banner__title{
+		margin: 0 0 0 12px;
+		h1{
+			margin-top: 0px;
+			font-size: 80px;
+			line-height: 75px;
+		}
+	}
+	.banner__head{
+		display: none;
+	}
+}
