--- a/src/scss/components/forms.scss
+++ b/src/scss/components/forms.scss
@@ -25,11 +25,13 @@
 	justify-content: space-around;
 	flex-wrap: wrap;
 	width: 967px;
+	max-width: 100%;
 
 }
 
 .inputs__input{
 	width: 353px;
+	max-width: 100%;
 	height: 71px;
 	@extend %forms;
 }
@@ -125,9 +127,10 @@
 	text-transform: uppercase;
 	font-style: italic;
 	font-size: 10px;
-	padding: 22px 75px;
+	padding: 20px 65px;
 	background-color: $primary;
 	border: none;
 	cursor: pointer;
 	border-radius: 10px;
+	outline: none;
 }
