--- a/src/scss/base/varibles.scss
+++ b/src/scss/base/varibles.scss
@@ -38,6 +38,7 @@ $bg-gray: #fafafa;
 body{
 	font-family: 'Avante', Arial, sans-serif;
 	font-size: 13px;
+	overflow-x: hidden;
 }
 
 .--italic{
@@ -60,8 +61,7 @@ body{
 }
 
 .wrapper {
-	width: 1440px;
-	max-width: 100vw;
+	max-width: 1440px;
 	box-sizing: border-box;
 	margin: 0 auto;
 }
@@ -93,7 +93,12 @@ body{
 	}
 }
 
-
+@media screen and (max-width: 1440px) {
+	.wrapper{
+		max-width: 1260px;
+		margin: 0;
+	}
+}
 @media screen and (max-width: 425px) {
 	.wrapper{
 		padding: 0px 20px;
