--- a/src/scss/components/project.scss
+++ b/src/scss/components/project.scss
@@ -50,6 +50,18 @@
 	}
 }
 
+
+.sctulpture__block{
+	transition: 0.5s ease-in-out;
+	
+}
+
+.sculpture__description{
+	transition: 0.3s ease-in-out;
+	opacity: 0;
+}
+
+
 .title__main{
 	cursor: pointer;
 	transition: all 0.2s ease-in-out;
@@ -73,4 +85,11 @@
 // // 
 // 		animation: rotation 0.6s linear infinite;
 // 	}
+}
+
+
+@media screen and (max-width: 425px){
+	.project__body{
+		display: none;
+	}
 }
