--- a/src/scss/base/varibles.scss
+++ b/src/scss/base/varibles.scss
@@ -72,7 +72,7 @@ body{
 
 %forms{
 	box-shadow: inset -3px -2px 3px 1px rgba(0, 0, 0, 0.11);
-	background-color: #ededed;
+	background-color: $gray;
 	box-sizing: border-box;
 	border-radius: 10px;
 	border: none;
@@ -96,11 +96,14 @@ body{
 @media screen and (max-width: 1440px) {
 	.wrapper{
 		max-width: 1260px;
-		margin: 0;
+		padding-left: 30px;
+		padding-right: 30px;
+		margin: 0 auto;
 	}
 }
 @media screen and (max-width: 425px) {
 	.wrapper{
+		width: 100%;
 		padding: 0px 20px;
 	}
 }
