--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -8,6 +8,7 @@
 }
 .header__logo{
 	margin-left: 90px;
+
 }
 .spacer__text{
 	letter-spacing: 8.21px;
@@ -26,6 +27,37 @@
 		height: 27px;
 	}
 }
+.header__links{
+	position: relative;
+}
+.links__list{
+	display: flex;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	transform: rotate(-90deg);
+	position: absolute;
+	left: -280px;
+	top: -60vh;
+
+	transition: 0.4s ease-in-out;
+	&.active{
+		top: 60vh;
+	}
+}
+
+.list__item{
+	margin: 0px 45px;
+
+	a{
+		color: $black;
+		text-decoration: none;
+		text-transform: uppercase;
+		font-size: 10px;
+		letter-spacing: 2px;
+	}
+}
+
 
 
 
