--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -6,10 +6,6 @@
 	justify-content: space-between;
 	align-items: center;
 }
-.header__logo{
-	margin-left: 90px;
-
-}
 .spacer__text{
 	letter-spacing: 8.21px;
 	font-style: italic;
@@ -39,7 +35,6 @@
 	position: absolute;
 	left: -280px;
 	top: -60vh;
-
 	transition: 0.6s ease-in-out;
 	&.active{
 		top: 60vh;
@@ -55,6 +50,26 @@
 		text-transform: uppercase;
 		font-size: 10px;
 		letter-spacing: 2px;
+	}
+}
+
+
+.--dark{
+
+	#logo-header{
+		fill: $primary-dark;
+	}
+	.header__logo{
+		#logo__text{
+			fill: $white;
+		}
+		#logo__rect{
+			fill: $primary-dark;
+		}
+	}
+
+	.header a {
+		color: $white;
 	}
 }
 
