--- a/src/scss/components/project.scss
+++ b/src/scss/components/project.scss
@@ -24,13 +24,15 @@
 	margin-bottom: 250px;
 }
 .project__body{
-	
 	svg{
 		display: block;
 		margin: 0 auto;
 		max-width: 100%;
 		height: auto;
 	}
+	.sculpture-dark{
+		display: none;
+	}	
 }
 .sculpture{
 	display: block;
@@ -89,6 +91,33 @@
 }
 
 
+.--dark{
+	.--gray-gradient{
+		background: #1b1b1b; /* Old browsers */
+		background: -moz-linear-gradient(top, #1b1b1b 0%, #030303 100%); /* FF3.6-15 */
+		background: -webkit-linear-gradient(top, #1b1b1b 0%,#030303 100%); /* Chrome10-25,Safari5.1-6 */
+		background: linear-gradient(to bottom, #1b1b1b 0%,#030303 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b1b1b', endColorstr='#030303',GradientType=0 ); /* IE6-9 */
+	}
+	.project__footer{
+		display: none;
+	}
+	.sculpture{
+		display: none;
+	}
+	.sculpture-dark{
+		display: block;
+	}
+
+	.title__main{
+		fill: $white;
+		&:hover{
+			fill: $primary-dark;
+		}
+	}
+}
+
+
 @media screen and (max-width: 425px){
 	.project{
 		padding-bottom: 35px;
@@ -105,7 +134,7 @@
 		position: relative;
 		width: 100%;
 		height: 870px;
-		.sculpture{
+		.sculpture, .sculpture-dark{
 			position: absolute;
 			top: 0;
 			width: 900px;
