--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'base/normalize';
 @import 'base/varibles';
 @import 'base/mixins';
+@import 'base/checkbox';
 @import 'components/header';
 @import 'components/banner';
 @import 'components/desc';
