--- a/src/scss/base/varibles.scss
+++ b/src/scss/base/varibles.scss
@@ -37,6 +37,8 @@ $white: #ffffff;
 $gray: #ededed;
 $bg-gray: #fafafa;
 $primary-dark: #4840ff;
+$gray-dark: #85858D;
+$gray-darknest: #1c1c1c;
 
 body{
 	font-family: 'Avante', Arial, sans-serif;
