--- a/src/scss/components/summary.scss
+++ b/src/scss/components/summary.scss
@@ -208,6 +208,7 @@
 
 	.summary__container{
 		background:transparent url('../img/summary_bg--dark.png') center top no-repeat;
+		background-attachment: fixed;
 		background-size: cover;
 	}
 
@@ -300,6 +301,7 @@
 	}
 	.to-bottom-arrows{
 		margin-top: 0px;
+		display: none;
 
 		svg{
 			width: 23px;
