--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -37,36 +37,40 @@
 	cursor: pointer;
 	left: 16px;
 	top: calc(100% - 30px);
-
-	// animation: wobble-horizontal 0.2s infinite;
+	transform-origin: 50% 0;
+	// animation: wobble-horizontal 10s infinite;
 	img{
 		width: 15px;
 	}
 }
 
 @keyframes wobble-horizontal {
-	12.5% {
-		transform: translateX(8px);
+
+	2% {
+		transform: rotate(8deg);
 	}
 
-	25% {
-		transform: translateX(-6px);
+	4% {
+		transform: rotate(-6deg);
 	}
 
-	37.5% {
-		transform: translateX(4px);
+	6% {
+		transform: rotate(4deg);
 	}
 
-	50% {
-		transform: translateX(-2px);
+	8% {
+		transform: rotate(-2deg);
 	}
 
-	62.5% {
-		transform: translateX(1px);
+	10% {
+		transform: rotate(1deg);
 	}
 
-	100% {
-		transform: translateX(0);
+	12% {
+		transform: rotate(0deg);
+	}
+	100%{
+		transform: rotate(0deg);
 	}
 }
 
@@ -113,6 +117,7 @@
 	.banner{
 		background:transparent url('../img/banner-background--dark.jpg') center top no-repeat;
 		background-size: cover;
+		background-attachment: fixed;
 	}
 	.banner__head{
 		position: relative;
@@ -121,7 +126,7 @@
 		&:before{
 			content: '';
 			position: absolute;
-			background:transparent url('../../img/planets.png') left top no-repeat;
+			background:transparent url('../img/planets.png') left top no-repeat;
 			background-size: contain;
 			width: 846px;
 			height: 944px;
