--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -16,7 +16,7 @@
 	 	</div>
 	 </div>
 	 <div class="banner__mob-contnent wrapper banner__toform-btn">
-	 	<div class="toform-btn__btn"><a href="#forms-block">хочу шедевр</a></div>
+	 	<div class="toform-btn__btn"><a href="#forms-block">{{to_form_btn}}</a></div>
 	 </div>
 	 <div class="banner__mob-contnent banner__mob-description wrapper">
 	 	<p class="banner__mob-text">Когда-то давно Микеланджело
