--- a/components/header.hbs
+++ b/components/header.hbs
@@ -1,4 +1,5 @@
 <header class="header">
+	{{#with first_slide}}
 	<div class="header__wrapper wrapper">
 		<div data-aos="fade-down" class="header__logo"><a href="">
 			<svg width="146px" height="45px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 292.01 88.98">
@@ -27,7 +28,7 @@
 			</svg>
 		</a></div>
 		<div data-aos="fade-down" data-aos-delay="200" class="header__spacer">
-			<a href="#forms-block" class="spacer__text">хочу шедевр</a>
+			<a href="#forms-block" class="spacer__text">{{to_form_btn}}</a>
 		</div>
 		<div data-aos="fade-down" data-aos-delay="400" class="header__links">
 			<div class="header__shower-btn">
@@ -47,4 +48,6 @@
 			</ul>
 		</div>
 	</div>
+
+	{{/with}}
 </header>
